--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "billing-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple billing API that generates random billing data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["billing", "api", "express", "faker"],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
